add comments to code

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -30,8 +30,8 @@
     </section>
 
     <section class="interactive">
-        <button id="funFactButton">Click here to learn fun facts about sheCodes</button>
-        <p id="factDisplay"></p>
+        <button id="funFactButton" onclick="display_facts()">Click here to learn fun facts about sheCodes</button>
+        <p id="facts"></p>
     </section>
 
     <script src="portfolio.js"></script>
